--- a/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
@@ -1,73 +1,62 @@
-<div class="container-fluid p-0" *ngIf="newsContent && generalContent">
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <div class="container-fluid">
-          <app-section-title [title]="newsContent.title" [subTitle]="newsContent.subTitle" [text]="newsContent.text"
-            [link]="newsContent.link">
-          </app-section-title>
-        </div>
-      </mat-card>
-    </div>
+<mat-card *ngIf="newsContent && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <div class="container-fluid">
+    <app-section-title [title]="newsContent.title" [subTitle]="newsContent.subTitle" [text]="newsContent.text"
+      [link]="newsContent.link">
+    </app-section-title>
   </div>
+</mat-card>
 
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <form (ngSubmit)="onSubmit()" #newsContentForm="ngForm">
+<mat-card *ngIf="newsContent && generalContent" class="{{generalContent.cardElevation}}">
+  <form (ngSubmit)="onSubmit()" #newsContentForm="ngForm">
 
-          <div class="form-group row">
-            <div class="col-12 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="newsContentTitle" placeholder="Titel" name="newsContentTitle"
-                [(ngModel)]="newsContent.title" #newsContentTitleInput="ngModel" required>
-              <mat-error *ngIf="newsContentTitleInput.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="newsContentSubTitle" placeholder="Subtitel" name="newsContentSubTitle"
-                [(ngModel)]="newsContent.subTitle" #newsContentSubTitleInput="ngModel" required>
-              <mat-error *ngIf="newsContentSubTitleInput.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-12">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="newsContentText" placeholder="Text" name="newsContentText"
-                [(ngModel)]="newsContent.text" #newsContentTextInput="ngModel" required> </textarea>
-              <mat-error *ngIf="newsContentTextInput.invalid">
-                Text is verplicht
-              </mat-error>
-            </mat-form-field>
-
-          </div>
-
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!newsContentForm.form.valid || newsContentForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="newsContentForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-      </mat-card>
+    <div class="form-group row">
+      <div class="col-12 d-flex align-items-center">
+        <h4 class="title-underlined">Instellingen</h4>
+      </div>
     </div>
-  </div>
 
-</div>
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content titel</mat-label>
+        <input matInput type="text" id="newsContentTitle" placeholder="Titel" name="newsContentTitle"
+          [(ngModel)]="newsContent.title" #newsContentTitleInput="ngModel" required>
+        <mat-error *ngIf="newsContentTitleInput.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content subtitel</mat-label>
+        <input matInput type="text" id="newsContentSubTitle" placeholder="Subtitel" name="newsContentSubTitle"
+          [(ngModel)]="newsContent.subTitle" #newsContentSubTitleInput="ngModel" required>
+        <mat-error *ngIf="newsContentSubTitleInput.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-12">
+        <mat-label>Content text</mat-label>
+        <textarea rows="1" matInput type="text" id="newsContentText" placeholder="Text" name="newsContentText"
+          [(ngModel)]="newsContent.text" #newsContentTextInput="ngModel" required> </textarea>
+        <mat-error *ngIf="newsContentTextInput.invalid">
+          Text is verplicht
+        </mat-error>
+      </mat-form-field>
+
+    </div>
+
+
+    <button mat-flat-button color="accent" type="submit"
+      [disabled]="!newsContentForm.form.valid || newsContentForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="newsContentForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
+</mat-card>
