--- a/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
+++ b/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
@@ -1,10 +1,9 @@
-<div class="container-fluid pt-5">
-  <app-section-title [title]="'Dashboard'" [subTitle]="'Admin'" [text]="'Welkom bij Material Admin'" [admin]="true">
-  </app-section-title>
+<app-section-title [title]="'Dashboard'" [subTitle]="'Admin'" [text]="'Welkom bij Material Admin'" [admin]="true">
+</app-section-title>
 
+<div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <div style="height: 2000px"></div>
     </div>
   </div>
 </div>
