--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -172,8 +172,7 @@ button::-moz-focus-inner {
 /*************************************/
 
 mat-card {
-  padding: 2rem !important;
-  margin-bottom: 1.5rem;
+  margin: 16px !important;
 }
 
 .card-clean {
