--- a/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
@@ -1,172 +1,171 @@
-<div class="container-fluid p-0" *ngIf="services && generalContent">
-  <div class="row mb-4">
-    <div class="col-12">
-
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <div *ngIf="services.active">
-          <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
-          </app-section-title>
-          <div class="row">
-            <div *ngFor="let service of services.services" class="col-lg-4 col-md-6 col-sm-12">
-              <app-service-card [service]="service" [elevation]="generalContent.cardElevation"></app-service-card>
-            </div>
-          </div>
-        </div>
-        <!-- Not visible -->
-        <div *ngIf="!services.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+<mat-card *ngIf="services && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <div *ngIf="services.active">
+    <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
+    </app-section-title>
+    <div class="row">
+      <div *ngFor="let service of services.services" class="col-lg-4 col-md-6 col-sm-12">
+        <app-service-card [service]="service" [elevation]="generalContent.cardElevation"></app-service-card>
+      </div>
     </div>
   </div>
+  <!-- Not visible -->
+  <div *ngIf="!services.active" class="w-100 text-center">
+    <ngb-alert [dismissible]="false" class="mb-0">
+      <strong>Niet</strong> zichtbaar op de website.
+    </ngb-alert>
+  </div>
+</mat-card>
 
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <form (ngSubmit)="onSubmit()" #contactCardsForm="ngForm">
 
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="services.active = !services.active; services.active ? contactCardsForm.form.enable() : contactCardsForm.form.disable(); contactCardsForm.form.markAsTouched()"
-                [color]="services.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="services.active">
-                <mat-icon>{{services.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
-          </div>
+<mat-card *ngIf="services && generalContent"  class="{{generalContent.cardElevation}}">
+  <form (ngSubmit)="onSubmit()" #contactCardsForm="ngForm">
 
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="contactCardContentTitle" placeholder="Titel"
-                name="contactCardContentTitle" [(ngModel)]="services.title" #contactCardContentTitleInput="ngModel"
-                required>
-              <mat-error *ngIf="contactCardContentTitleInput.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
+    <div class="form-group row">
+      <div class="col-sm-12 col-md-10 d-flex align-items-center">
+        <h4 class="title-underlined">Instellingen</h4>
+      </div>
+      <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+        <button mat-mini-fab type="button"
+          (click)="services.active = !services.active; services.active ? contactCardsForm.form.enable() : contactCardsForm.form.disable(); contactCardsForm.form.markAsTouched()"
+          [color]="services.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+          [attr.aria-pressed]="services.active">
+          <mat-icon>{{services.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+        </button>
+      </div>
+    </div>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="contactCardContentSubTitle" placeholder="Subtitel"
-                name="contactCardContentSubTitle" [(ngModel)]="services.subTitle"
-                #contactCardContentSubTitleInput="ngModel" required>
-              <mat-error *ngIf="contactCardContentSubTitleInput.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content titel</mat-label>
+        <input matInput type="text" id="contactCardContentTitle" placeholder="Titel" name="contactCardContentTitle"
+          [(ngModel)]="services.title" #contactCardContentTitleInput="ngModel" required>
+        <mat-error *ngIf="contactCardContentTitleInput.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="contactCardContentText" placeholder="Text"
-                name="contactCardContentText" [(ngModel)]="services.text" #contactCardContentTextInput="ngModel"
-                required> </textarea>
-              <mat-error *ngIf="contactCardContentTextInput.invalid">
-                Text is verplicht
-              </mat-error>
-            </mat-form-field>
-          </div>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content subtitel</mat-label>
+        <input matInput type="text" id="contactCardContentSubTitle" placeholder="Subtitel"
+          name="contactCardContentSubTitle" [(ngModel)]="services.subTitle" #contactCardContentSubTitleInput="ngModel"
+          required>
+        <mat-error *ngIf="contactCardContentSubTitleInput.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
 
-          <div class="form-group row">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card titel</mat-label>
-                <input matInput type="text" id="contactCard0Title" placeholder="Titel" name="contactCard0Title"
-                  [(ngModel)]="services.services[0].title" #contactCard0TitleInput="ngModel" required>
-                <mat-error *ngIf="contactCard0TitleInput.invalid">
-                  Titel is verplicht
-                </mat-error>
-              </mat-form-field>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-12">
+        <mat-label>Content text</mat-label>
+        <textarea rows="1" matInput type="text" id="contactCardContentText" placeholder="Text"
+          name="contactCardContentText" [(ngModel)]="services.text" #contactCardContentTextInput="ngModel"
+          required> </textarea>
+        <mat-error *ngIf="contactCardContentTextInput.invalid">
+          Text is verplicht
+        </mat-error>
+      </mat-form-field>
+    </div>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card icon</mat-label>
-                <input matInput type="text" id="contactCard0Icon" placeholder="Icon" name="contactCard0Icon"
-                  [(ngModel)]="services.services[0].icon" #contactCard0IconInput="ngModel" required>
-                <mat-error *ngIf="contactCard0IconInput.invalid">
-                  Icon is verplicht
-                </mat-error>
-              </mat-form-field>
+    <div class="form-group row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card titel</mat-label>
+          <input matInput type="text" id="contactCard0Title" placeholder="Titel" name="contactCard0Title"
+            [(ngModel)]="services.services[0].title" #contactCard0TitleInput="ngModel" required>
+          <mat-error *ngIf="contactCard0TitleInput.invalid">
+            Titel is verplicht
+          </mat-error>
+        </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card tekst</mat-label>
-                <input matInput type="text" id="contactCard0Text" placeholder="Text" name="contactCard0Text"
-                  [(ngModel)]="services.services[0].description">
-              </mat-form-field>
-            </div>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card icon</mat-label>
+          <input matInput type="text" id="contactCard0Icon" placeholder="Icon" name="contactCard0Icon"
+            [(ngModel)]="services.services[0].icon" #contactCard0IconInput="ngModel" required>
+          <mat-error *ngIf="contactCard0IconInput.invalid">
+            Icon is verplicht
+          </mat-error>
+        </mat-form-field>
 
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card titel</mat-label>
-                <input matInput type="text" id="contactCard1Title" placeholder="Titel" name="contactCard1Title"
-                  [(ngModel)]="services.services[1].title" #contactCard1TitleInput="ngModel" required>
-                <mat-error *ngIf="contactCard1TitleInput.invalid">
-                  Titel is verplicht
-                </mat-error>
-              </mat-form-field>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card tekst</mat-label>
+          <input matInput type="text" id="contactCard0Text" placeholder="Text" name="contactCard0Text"
+            [(ngModel)]="services.services[0].description">
+        </mat-form-field>
+      </div>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card icon</mat-label>
-                <input matInput type="text" id="contactCard1Icon" placeholder="Icon" name="contactCard1Icon"
-                  [(ngModel)]="services.services[1].icon" #contactCard1IconInput="ngModel" required>
-                <mat-error *ngIf="contactCard1IconInput.invalid">
-                  Icon is verplicht
-                </mat-error>
-              </mat-form-field>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card titel</mat-label>
+          <input matInput type="text" id="contactCard1Title" placeholder="Titel" name="contactCard1Title"
+            [(ngModel)]="services.services[1].title" #contactCard1TitleInput="ngModel" required>
+          <mat-error *ngIf="contactCard1TitleInput.invalid">
+            Titel is verplicht
+          </mat-error>
+        </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card tekst</mat-label>
-                <input matInput type="text" id="contactCard1Text" placeholder="Text" name="contactCard1Text"
-                  [(ngModel)]="services.services[1].description">
-              </mat-form-field>
-            </div>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card icon</mat-label>
+          <input matInput type="text" id="contactCard1Icon" placeholder="Icon" name="contactCard1Icon"
+            [(ngModel)]="services.services[1].icon" #contactCard1IconInput="ngModel" required>
+          <mat-error *ngIf="contactCard1IconInput.invalid">
+            Icon is verplicht
+          </mat-error>
+        </mat-form-field>
 
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card titel</mat-label>
-                <input matInput type="text" id="contactCard2Title" placeholder="Titel" name="contactCard2Title"
-                  [(ngModel)]="services.services[2].title" #contactCard2TitleInput="ngModel" required>
-                <mat-error *ngIf="contactCard2TitleInput.invalid">
-                  Titel is verplicht
-                </mat-error>
-              </mat-form-field>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card tekst</mat-label>
+          <input matInput type="text" id="contactCard1Text" placeholder="Text" name="contactCard1Text"
+            [(ngModel)]="services.services[1].description">
+        </mat-form-field>
+      </div>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card icon</mat-label>
-                <input matInput type="text" id="contactCard2Icon" placeholder="Icon" name="contactCard2Icon"
-                  [(ngModel)]="services.services[2].icon" #contactCard2IconInput="ngModel" required>
-                <mat-error *ngIf="contactCard2IconInput.invalid">
-                  Icon is verplicht
-                </mat-error>
-              </mat-form-field>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card titel</mat-label>
+          <input matInput type="text" id="contactCard2Title" placeholder="Titel" name="contactCard2Title"
+            [(ngModel)]="services.services[2].title" #contactCard2TitleInput="ngModel" required>
+          <mat-error *ngIf="contactCard2TitleInput.invalid">
+            Titel is verplicht
+          </mat-error>
+        </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
-                <mat-label>Card tekst</mat-label>
-                <input matInput type="text" id="contactCard2Text" placeholder="Text" name="contactCard2Text"
-                  [(ngModel)]="services.services[2].description">
-              </mat-form-field>
-            </div>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card icon</mat-label>
+          <input matInput type="text" id="contactCard2Icon" placeholder="Icon" name="contactCard2Icon"
+            [(ngModel)]="services.services[2].icon" #contactCard2IconInput="ngModel" required>
+          <mat-error *ngIf="contactCard2IconInput.invalid">
+            Icon is verplicht
+          </mat-error>
+        </mat-form-field>
 
-          </div>
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!contactCardsForm.form.valid || contactCardsForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="contactCardsForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-      </mat-card>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field w-100">
+          <mat-label>Card tekst</mat-label>
+          <input matInput type="text" id="contactCard2Text" placeholder="Text" name="contactCard2Text"
+            [(ngModel)]="services.services[2].description">
+        </mat-form-field>
+      </div>
 
     </div>
-  </div>
 
-</div>
+    <button mat-flat-button color="accent" type="submit"
+      [disabled]="!contactCardsForm.form.valid || contactCardsForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="contactCardsForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
+</mat-card>
