--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -1,113 +1,106 @@
-<div class="container-fluid p-0" *ngIf="cta && generalContent">
-  <div class="row mb-4">
+<mat-card *ngIf="cta && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <div *ngIf="cta.active" class="container-fluid p-5" [style.backgroundImage]="'url(' + cta.image + ')'">
     <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <div *ngIf="cta.active" class="container-fluid p-5" [style.backgroundImage]="'url(' + cta.image + ')'">
-          <div class="col-12">
-            <app-call-to-action [title]="cta.title" [subTitle]="cta.subTitle" [buttonText]="cta.btnText"
-              [buttonLink]="cta.btnLink">
-            </app-call-to-action>
-          </div>
-        </div>
-        <!-- Not visible -->
-        <div *ngIf="!cta.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+      <app-call-to-action [title]="cta.title" [subTitle]="cta.subTitle" [buttonText]="cta.btnText"
+        [buttonLink]="cta.btnLink">
+      </app-call-to-action>
     </div>
   </div>
-
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <form (ngSubmit)="onSubmit()" #ctaForm="ngForm">
-
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="cta.active = !cta.active; cta.active ? ctaForm.form.enable() : ctaForm.form.disable(); ctaForm.form.markAsTouched()"
-                [color]="cta.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="cta.active">
-                <mat-icon>{{cta.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
-                [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
-              <mat-error *ngIf="ctaContentTitleInput.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
-                [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
-              <mat-error *ngIf="ctaContentSubTitleInput.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
-              <mat-label>Achtergrond</mat-label>
-              <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
-                <mat-option [value]="backgrounds[0]">
-                  <img [src]="backgrounds[0]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Blauw
-                </mat-option>
-                <mat-option [value]="backgrounds[1]">
-                  <img [src]="backgrounds[1]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Licht
-                </mat-option>
-                <mat-option [value]="backgrounds[2]">
-                  <img [src]="backgrounds[2]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Donker
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-xs-12 col-sm-6">
-              <mat-label>Knop label</mat-label>
-              <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
-                [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
-              <mat-error *ngIf="ctaContentBtnLabelInput.invalid">Label is verplicht
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-xs-12 col-sm-6">
-              <mat-label>Knop link</mat-label>
-              <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
-                [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
-              <mat-error *ngIf="ctaContentBtnLinkInput.invalid">
-                Link is verplicht
-              </mat-error>
-            </mat-form-field>
-          </div>
-
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!ctaForm.form.valid || ctaForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="ctaForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-      </mat-card>
-    </div>
+  <!-- Not visible -->
+  <div *ngIf="!cta.active" class="w-100 text-center">
+    <ngb-alert [dismissible]="false" class="mb-0">
+      <strong>Niet</strong> zichtbaar op de website.
+    </ngb-alert>
   </div>
+</mat-card>
 
-</div>
+<mat-card *ngIf="cta && generalContent" class="{{generalContent.cardElevation}}">
+  <form (ngSubmit)="onSubmit()" #ctaForm="ngForm">
+
+    <div class="form-group row">
+      <div class="col-sm-12 col-md-10 d-flex align-items-center">
+        <h4 class="title-underlined">Instellingen</h4>
+      </div>
+      <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+        <button mat-mini-fab type="button"
+          (click)="cta.active = !cta.active; cta.active ? ctaForm.form.enable() : ctaForm.form.disable(); ctaForm.form.markAsTouched()"
+          [color]="cta.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+          [attr.aria-pressed]="cta.active">
+          <mat-icon>{{cta.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+        </button>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content titel</mat-label>
+        <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
+          [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
+        <mat-error *ngIf="ctaContentTitleInput.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content subtitel</mat-label>
+        <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
+          [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
+        <mat-error *ngIf="ctaContentSubTitleInput.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-12">
+        <mat-label>Achtergrond</mat-label>
+        <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
+          <mat-option [value]="backgrounds[0]">
+            <img [src]="backgrounds[0]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+            Blauw
+          </mat-option>
+          <mat-option [value]="backgrounds[1]">
+            <img [src]="backgrounds[1]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+            Licht
+          </mat-option>
+          <mat-option [value]="backgrounds[2]">
+            <img [src]="backgrounds[2]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+            Donker
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-xs-12 col-sm-6">
+        <mat-label>Knop label</mat-label>
+        <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
+          [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
+        <mat-error *ngIf="ctaContentBtnLabelInput.invalid">Label is verplicht
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-xs-12 col-sm-6">
+        <mat-label>Knop link</mat-label>
+        <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
+          [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
+        <mat-error *ngIf="ctaContentBtnLinkInput.invalid">
+          Link is verplicht
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <button mat-flat-button color="accent" type="submit" [disabled]="!ctaForm.form.valid || ctaForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="ctaForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
+</mat-card>
