--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -1,114 +1,109 @@
-<div class="container-fluid p-0" *ngIf="featured && generalContent">
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <div *ngIf="featured.active">
-          <div class="container-fluid">
-            <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
-            </app-section-title>
-          </div>
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-12">
-                <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight" [elevation]="generalContent.cardElevation">
-                </app-painting-card>
-              </div>
-            </div>
-          </div>
+<mat-card *ngIf="featured && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <div *ngIf="featured.active">
+    <div class="container-fluid">
+      <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
+      </app-section-title>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight"
+            [elevation]="generalContent.cardElevation">
+          </app-painting-card>
         </div>
-        <!-- Not visible -->
-        <div *ngIf="!featured.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+      </div>
     </div>
   </div>
+  <!-- Not visible -->
+  <div *ngIf="!featured.active" class="w-100 text-center">
+    <ngb-alert [dismissible]="false" class="mb-0">
+      <strong>Niet</strong> zichtbaar op de website.
+    </ngb-alert>
+  </div>
+</mat-card>
 
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <form (ngSubmit)="onSubmit()" #featuredForm="ngForm">
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="featured.active = !featured.active; featured.active ? featuredForm.form.enable() : featuredForm.form.disable(); featuredForm.form.markAsTouched()"
-                [color]="featured.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="featured.active">
-                <mat-icon>{{ featured.active ? "visibility" : "visibility_off" }}</mat-icon>
-              </button>
-            </div>
-          </div>
+<mat-card *ngIf="featured && generalContent" class="{{generalContent.cardElevation}}">
+  <form (ngSubmit)="onSubmit()" #featuredForm="ngForm">
+    <div class="form-group row">
+      <div class="col-sm-12 col-md-10 d-flex align-items-center">
+        <h4 class="title-underlined">Instellingen</h4>
+      </div>
+      <div class="col-12 col-md-2 d-flex align-items-start justify-content-end">
+        <button mat-mini-fab type="button"
+          (click)="featured.active = !featured.active; featured.active ? featuredForm.form.enable() : featuredForm.form.disable(); featuredForm.form.markAsTouched()"
+          [color]="featured.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+          [attr.aria-pressed]="featured.active">
+          <mat-icon>{{ featured.active ? "visibility" : "visibility_off" }}</mat-icon>
+        </button>
+      </div>
+    </div>
 
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
-                [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
-              <mat-error *ngIf="featuredContentTitleInput.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content titel</mat-label>
+        <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
+          [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
+        <mat-error *ngIf="featuredContentTitleInput.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel"
-                name="featuredContentSubTitle" [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel"
-                required />
-              <mat-error *ngIf="featuredContentSubTitleInput.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content subtitel</mat-label>
+        <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel" name="featuredContentSubTitle"
+          [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel" required />
+        <mat-error *ngIf="featuredContentSubTitleInput.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text"
-                name="featuredContentText" [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-12">
+        <mat-label>Content text</mat-label>
+        <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text" name="featuredContentText"
+          [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
               </textarea>
-              <mat-error *ngIf="featuredContentTextInput.invalid">
-                Text is verplicht
-              </mat-error>
-            </mat-form-field>
+        <mat-error *ngIf="featuredContentTextInput.invalid">
+          Text is verplicht
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Schilderij</mat-label>
-              <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
-                #featuredContentPaintingInput="ngModel" required>
-                <mat-option *ngFor="let painting of paintings" [value]="painting">
-                  <img [src]="painting.thumbnail" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  {{ painting.title }}
-                </mat-option>
-              </mat-select>
-              <mat-error *ngIf="featuredContentPaintingInput.invalid">
-                Schilderij is verplicht
-              </mat-error>
-            </mat-form-field>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Schilderij</mat-label>
+        <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
+          #featuredContentPaintingInput="ngModel" required>
+          <mat-option *ngFor="let painting of paintings" [value]="painting">
+            <img [src]="painting.thumbnail" alt="thumbnail" class="img-thumbnail img-dropdown" />
+            {{ painting.title }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="featuredContentPaintingInput.invalid">
+          Schilderij is verplicht
+        </mat-error>
+      </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
-              <mat-label>Hoogte</mat-label>
-              <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
-                [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
-              <mat-error *ngIf="featuredContentHeightInput.invalid">
-                Hoogte is verplicht
-              </mat-error>
-            </mat-form-field>
-          </div>
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!featuredForm.form.valid || featuredForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="featuredForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-      </mat-card>
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Hoogte</mat-label>
+        <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
+          [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
+        <mat-error *ngIf="featuredContentHeightInput.invalid">
+          Hoogte is verplicht
+        </mat-error>
+      </mat-form-field>
     </div>
-  </div>
-</div>
+
+    <button mat-flat-button color="accent" type="submit"
+      [disabled]="!featuredForm.form.valid || featuredForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="featuredForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
+</mat-card>
