--- a/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
@@ -1,67 +1,57 @@
-<div class="container-fluid p-0" *ngIf="pageTitle && generalContent">
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image"
-          [elevation]="generalContent.cardElevation"></app-header>
-      </mat-card>
+<mat-card *ngIf="pageTitle && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image"
+    [elevation]="generalContent.cardElevation"></app-header>
+</mat-card>
+
+<mat-card *ngIf="pageTitle && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Instellingen</h4>
+  <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
+
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Titel</mat-label>
+        <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
+          [(ngModel)]="pageTitle.title" #title="ngModel" required>
+        <mat-error *ngIf="title.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Subtitel</mat-label>
+        <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
+          [(ngModel)]="pageTitle.subTitle" #subTitle="ngModel" required>
+        <mat-error *ngIf="subTitle.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field *ngIf="fileUploads" [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12">
+        <mat-label>Afbeelding</mat-label>
+        <mat-select id="defaultImage" name="defaultImage" [(ngModel)]="pageTitle.image" #defaultImage="ngModel">
+          <mat-option *ngFor="let file of fileUploads" [value]="file.url">
+            <img [src]="file.url" alt="thumbnail" class="img-thumbnail img-dropdown" />
+            {{ file.name }}
+          </mat-option>
+        </mat-select>
+        <mat-hint>
+          Als deze afbeelding leeg is zal de standaard header afbeelding getoond worden.
+        </mat-hint>
+      </mat-form-field>
     </div>
-  </div>
 
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Instellingen</h4>
-        <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
+    <button mat-flat-button color="accent" type="submit"
+      [disabled]="!headerForm.form.valid || headerForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="headerForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
 
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Titel</mat-label>
-              <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
-                [(ngModel)]="pageTitle.title" #title="ngModel" required>
-              <mat-error *ngIf="title.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Subtitel</mat-label>
-              <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
-                [(ngModel)]="pageTitle.subTitle" #subTitle="ngModel" required>
-              <mat-error *ngIf="subTitle.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field *ngIf="fileUploads" [appearance]="generalContent.formStyle"
-              [color]="generalContent.formColor" class="form-field col-sm-12">
-              <mat-label>Afbeelding</mat-label>
-              <mat-select id="defaultImage" name="defaultImage" [(ngModel)]="pageTitle.image" #defaultImage="ngModel">
-                <mat-option *ngFor="let file of fileUploads" [value]="file.url">
-                  <img [src]="file.url" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  {{ file.name }}
-                </mat-option>
-              </mat-select>
-              <mat-hint>
-                Als deze afbeelding leeg is zal de standaard header afbeelding getoond worden.
-              </mat-hint>
-            </mat-form-field>
-          </div>
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!headerForm.form.valid || headerForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="headerForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-
-      </mat-card>
-    </div>
-  </div>
-</div>
+</mat-card>
