--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -1,106 +1,95 @@
-<div class="container-fluid p-0" *ngIf="latestNews && generalContent">
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-        <h4 class="title-underlined">Resultaat</h4>
-        <div *ngIf="latestNews.active" class="container-fluid">
-          <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
-            [link]="latestNews.link">
-          </app-section-title>
-          <div class="row">
-            <div class="col-12">
-              <app-latest-news [amount]="latestNews.amount" [generalContent]="generalContent"></app-latest-news>
-            </div>
-          </div>
-        </div>
-        <!-- Not visible -->
-        <div *ngIf="!latestNews.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+<mat-card *ngIf="latestNews && generalContent" class="{{generalContent.cardElevation}}">
+  <h4 class="title-underlined">Resultaat</h4>
+  <div *ngIf="latestNews.active" class="container-fluid">
+    <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
+      [link]="latestNews.link">
+    </app-section-title>
+    <div class="row">
+      <div class="col-12">
+        <app-latest-news [amount]="latestNews.amount" [generalContent]="generalContent"></app-latest-news>
+      </div>
     </div>
   </div>
-
-  <div class="row mb-4">
-    <div class="col-12">
-      <mat-card class="{{generalContent.cardElevation}}">
-
-
-        <form (ngSubmit)="onSubmit()" #latestNewsForm="ngForm">
-
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="latestNews.active = !latestNews.active; latestNews.active ? latestNewsForm.form.enable() : latestNewsForm.form.disable(); latestNewsForm.form.markAsTouched()"
-                [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="latestNews.active">
-                <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
-                [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
-              <mat-error *ngIf="latestNewsContentTitleInput.invalid">
-                Titel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel"
-                name="latestNewsContentSubTitle" [(ngModel)]="latestNews.subTitle"
-                #latestNewsContentSubTitleInput="ngModel" required>
-              <mat-error *ngIf="latestNewsContentSubTitleInput.invalid">
-                Subtitel is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-10">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text"
-                name="latestNewsContentText" [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel"
-                required> </textarea>
-              <mat-error *ngIf="latestNewsContentTextInput.invalid">
-                Text is verplicht
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-              class="form-field col-2">
-              <mat-label>Items</mat-label>
-              <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
-                [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
-              <mat-error *ngIf="latestNewsContentAmountInput.invalid">
-                Aantal is verplicht
-              </mat-error>
-            </mat-form-field>
-
-          </div>
-
-
-          <button mat-flat-button color="accent" type="submit"
-            [disabled]="!latestNewsForm.form.valid || latestNewsForm.form.pristine">
-            Opslaan
-          </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestNewsForm.form.pristine"
-            (click)="resetForm()">
-            Reset
-          </button>
-        </form>
-      </mat-card>
-    </div>
+  <!-- Not visible -->
+  <div *ngIf="!latestNews.active" class="w-100 text-center">
+    <ngb-alert [dismissible]="false" class="mb-0">
+      <strong>Niet</strong> zichtbaar op de website.
+    </ngb-alert>
   </div>
+</mat-card>
 
-</div>
+<mat-card *ngIf="latestNews && generalContent" class="{{generalContent.cardElevation}}">
+
+
+  <form (ngSubmit)="onSubmit()" #latestNewsForm="ngForm">
+
+    <div class="form-group row">
+      <div class="col-sm-12 col-md-10 d-flex align-items-center">
+        <h4 class="title-underlined">Instellingen</h4>
+      </div>
+      <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+        <button mat-mini-fab type="button"
+          (click)="latestNews.active = !latestNews.active; latestNews.active ? latestNewsForm.form.enable() : latestNewsForm.form.disable(); latestNewsForm.form.markAsTouched()"
+          [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+          [attr.aria-pressed]="latestNews.active">
+          <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+        </button>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content titel</mat-label>
+        <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
+          [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
+        <mat-error *ngIf="latestNewsContentTitleInput.invalid">
+          Titel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-sm-12 col-md-6">
+        <mat-label>Content subtitel</mat-label>
+        <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel"
+          name="latestNewsContentSubTitle" [(ngModel)]="latestNews.subTitle" #latestNewsContentSubTitleInput="ngModel"
+          required>
+        <mat-error *ngIf="latestNewsContentSubTitleInput.invalid">
+          Subtitel is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-10">
+        <mat-label>Content text</mat-label>
+        <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text"
+          name="latestNewsContentText" [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel"
+          required> </textarea>
+        <mat-error *ngIf="latestNewsContentTextInput.invalid">
+          Text is verplicht
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+        class="form-field col-2">
+        <mat-label>Items</mat-label>
+        <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
+          [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
+        <mat-error *ngIf="latestNewsContentAmountInput.invalid">
+          Aantal is verplicht
+        </mat-error>
+      </mat-form-field>
+
+    </div>
+
+
+    <button mat-flat-button color="accent" type="submit"
+      [disabled]="!latestNewsForm.form.valid || latestNewsForm.form.pristine">
+      Opslaan
+    </button>
+    <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestNewsForm.form.pristine"
+      (click)="resetForm()">
+      Reset
+    </button>
+  </form>
+</mat-card>
