--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid pt-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
-  </app-section-title>
+<app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
+</app-section-title>
 
+<div class="container-fluid">
   <div class="row mb-5">
     <div class="col-12" *ngIf="isLoadingResults">
       <app-loading [message]="'Bestanden laden...'"></app-loading>
@@ -64,7 +64,8 @@
         </div>
 
         <!-- Paginator -->
-        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [length]="resultsLength" [pageSize]="generalContent.pageSizeDefault" [pageSizeOptions]="generalContent.pageSizeOptions" showFirstLastButtons>
+        </mat-paginator>
 
       </div>
 
