--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -1,143 +1,119 @@
-<div class="container-fluid py-5" *ngIf="generalContent">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
-  </app-section-title>
+<app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
+</app-section-title>
 
-  <mat-accordion class="admin-accordion">
-    <!-- Header -->
-    <mat-expansion-panel [expanded]="panelStep === 0" (opened)="setStep(0)">
-      <mat-expansion-panel-header class="title-header">
-        <mat-panel-title>
-          <h4 class="title-underlined mb-0 mt-2">Header</h4>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-comp-header [page]="'404'"></app-comp-header>
-      <mat-action-row>
-        <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button>
-      </mat-action-row>
-    </mat-expansion-panel>
-
-    <!-- Links -->
-    <mat-expansion-panel [expanded]="panelStep === 1" (opened)="setStep(1)">
-      <mat-expansion-panel-header class="title-header">
-        <mat-panel-title>
-          <h4 class="title-underlined mb-0 mt-2">Knoppen</h4>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      <div class="container-fluid" *ngIf="pageContent">
-        <div class="row mb-4">
-          <div class="col-12">
-            <mat-card class="{{generalContent.cardElevation}}">
-              <h4 class="title-underlined">Resultaat</h4>
-              <app-section-title [title]="pageContent.title" [subTitle]="pageContent.subTitle"
-                [text]="pageContent.text">
-              </app-section-title>
-              <div class="row">
-                <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
-                  <button mat-raised-button color="accent" class="rounded-pill mt-3">
-                    <mat-icon>reply</mat-icon>
-                    {{pageContent.btnBackText}}
-                  </button>
-                </div>
-                <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
-                  <button mat-raised-button color="accent" class="rounded-pill mt-3"
-                    routerLink="{{pageContent.btnHomeLink}}">
-                    <mat-icon>home</mat-icon>
-                    {{pageContent.btnHomeText}}
-                  </button>
-                </div>
-              </div>
-            </mat-card>
-          </div>
-        </div>
-
-        <div class="row mb-4">
-          <div class="col-12">
-            <mat-card class="{{generalContent.cardElevation}}">
-              <h4 class="title-underlined">Instellingen</h4>
-              <form (ngSubmit)="onSubmit()" #pnfContentForm="ngForm">
-
-                <div class="form-group row">
-                  <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                    class="form-field col-sm-12 col-md-6">
-                    <mat-label>Content titel</mat-label>
-                    <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
-                      [(ngModel)]="pageContent.title" #contentTitleInput="ngModel" required>
-                    <mat-error *ngIf="contentTitleInput.invalid">
-                      Titel is <strong>verplicht</strong>
-                    </mat-error>
-                  </mat-form-field>
-
-                  <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                    class="form-field col-sm-12 col-md-6">
-                    <mat-label>Content subtitel</mat-label>
-                    <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
-                      [(ngModel)]="pageContent.subTitle" #contentSubTitleInput="ngModel" required>
-                    <mat-error *ngIf="contentSubTitleInput.invalid">
-                      Subtitel is <strong>verplicht</strong>
-                    </mat-error>
-                  </mat-form-field>
-
-                  <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                    class="form-field col-12">
-                    <mat-label>Content text</mat-label>
-                    <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
-                      [(ngModel)]="pageContent.text" #contentTextInput="ngModel" required> </textarea>
-                    <mat-error *ngIf="contentTextInput.invalid">
-                      Text is <strong>verplicht</strong>
-                    </mat-error>
-                  </mat-form-field>
-                </div>
-
-                <div class="form-group row">
-                  <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                    class="form-field col-sm-12 col-md-6">
-                    <mat-label>Vorige knop label</mat-label>
-                    <input matInput type="text" id="backBtnLabel" placeholder="Label" name="backBtnLabel"
-                      [(ngModel)]="pageContent.btnBackText" #backBtnLabelInput="ngModel" required>
-                    <mat-error *ngIf="backBtnLabelInput.invalid">
-                      Label is <strong>verplicht</strong>
-                    </mat-error>
-                  </mat-form-field>
-
-                  <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                    class="form-field col-sm-12 col-md-6">
-                    <mat-label>Home knop label</mat-label>
-                    <input matInput type="text" id="homeBtnLabel" placeholder="Label" name="homeBtnLabel"
-                      [(ngModel)]="pageContent.btnHomeText" #homeBtnLabelInput="ngModel" required>
-                    <mat-error *ngIf="homeBtnLabelInput.invalid">
-                      Label is <strong>verplicht</strong>
-                    </mat-error>
-                  </mat-form-field>
-                </div>
-
-                <button mat-flat-button color="accent" type="submit"
-                  [disabled]="!pnfContentForm.form.valid || pnfContentForm.form.pristine">Opslaan</button>
-                <button mat-flat-button color="primary" type="button" class="ml-3" (click)="resetForm()">Reset</button>
-              </form>
-            </mat-card>
-          </div>
-        </div>
-      </div>
-
-      <mat-action-row>
-        <button mat-raised-button color="primary" (click)="prevStep()">Vorige</button>
-      </mat-action-row>
-    </mat-expansion-panel>
-
-  </mat-accordion>
+<!-- Tab group -->
+<div class="container-fluid" *ngIf="generalContent">
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-tab-group mat-stretch-tabs color="primary">
+        <!-- Header tab -->
+        <mat-tab label="Header">
+          <ng-container *ngTemplateOutlet="headerTab"></ng-container>
+        </mat-tab>
+        <!-- Cards tab -->
+        <mat-tab label="Knoppen">
+          <ng-container *ngTemplateOutlet="buttonsTab"></ng-container>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
 </div>
 
+<!-- Tab content templates -->
+<ng-template #headerTab>
+  <app-comp-header [page]="'404'" [generalContent]="generalContent"></app-comp-header>
+</ng-template>
+<ng-template #buttonsTab>
+  <mat-card *ngIf="pageContent" class="{{generalContent.cardElevation}}">
+    <h4 class="title-underlined">Resultaat</h4>
+    <app-section-title [title]="pageContent.title" [subTitle]="pageContent.subTitle" [text]="pageContent.text">
+    </app-section-title>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
+        <button mat-raised-button color="accent" class="rounded-pill mt-3">
+          <mat-icon>reply</mat-icon>
+          {{pageContent.btnBackText}}
+        </button>
+      </div>
+      <div class="col-xs-12 col-sm-6 d-flex align-items-center justify-content-center">
+        <button mat-raised-button color="accent" class="rounded-pill mt-3" routerLink="{{pageContent.btnHomeLink}}">
+          <mat-icon>home</mat-icon>
+          {{pageContent.btnHomeText}}
+        </button>
+      </div>
+    </div>
+  </mat-card>
+  <mat-card *ngIf="pageContent" class="{{generalContent.cardElevation}}">
+    <h4 class="title-underlined">Instellingen</h4>
+    <form (ngSubmit)="onSubmit()" #pnfContentForm="ngForm">
+
+      <div class="form-group row">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content titel</mat-label>
+          <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
+            [(ngModel)]="pageContent.title" #contentTitleInput="ngModel" required>
+          <mat-error *ngIf="contentTitleInput.invalid">
+            Titel is <strong>verplicht</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content subtitel</mat-label>
+          <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
+            [(ngModel)]="pageContent.subTitle" #contentSubTitleInput="ngModel" required>
+          <mat-error *ngIf="contentSubTitleInput.invalid">
+            Subtitel is <strong>verplicht</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-12">
+          <mat-label>Content text</mat-label>
+          <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
+            [(ngModel)]="pageContent.text" #contentTextInput="ngModel" required> </textarea>
+          <mat-error *ngIf="contentTextInput.invalid">
+            Text is <strong>verplicht</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-group row">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Vorige knop label</mat-label>
+          <input matInput type="text" id="backBtnLabel" placeholder="Label" name="backBtnLabel"
+            [(ngModel)]="pageContent.btnBackText" #backBtnLabelInput="ngModel" required>
+          <mat-error *ngIf="backBtnLabelInput.invalid">
+            Label is <strong>verplicht</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Home knop label</mat-label>
+          <input matInput type="text" id="homeBtnLabel" placeholder="Label" name="homeBtnLabel"
+            [(ngModel)]="pageContent.btnHomeText" #homeBtnLabelInput="ngModel" required>
+          <mat-error *ngIf="homeBtnLabelInput.invalid">
+            Label is <strong>verplicht</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <button mat-flat-button color="accent" type="submit"
+        [disabled]="!pnfContentForm.form.valid || pnfContentForm.form.pristine">Opslaan</button>
+      <button mat-flat-button color="primary" type="button" class="ml-3" (click)="resetForm()">Reset</button>
+    </form>
+  </mat-card>
+</ng-template>
 
 <!-- Page preview -->
 <ng-template #content>
-
   <mat-dialog-content>
     <app-page-not-found [pageTitle]="pageTitle" [content]="pageContent"></app-page-not-found>
   </mat-dialog-content>
-
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close cdkFocusInitial>Close</button>
   </mat-dialog-actions>
-
 </ng-template>
