--- a/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
+++ b/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
@@ -1,35 +1,28 @@
-<div class="container-fluid py-5" *ngIf="generalContent">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
-  </app-section-title>
+<app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
+</app-section-title>
 
-  <mat-accordion class="admin-accordion">
-
-    <!-- Header -->
-    <mat-expansion-panel [expanded]="panelStep === 0" (opened)="setStep(0)">
-      <mat-expansion-panel-header class="title-header">
-        <mat-panel-title>
-          <h4 class="title-underlined mb-0 mt-2">Header</h4>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-comp-header [page]="'portfolio'" [generalContent]="generalContent"></app-comp-header>
-      <mat-action-row>
-        <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button>
-      </mat-action-row>
-    </mat-expansion-panel>
-
-    <!-- Gallery -->
-    <mat-expansion-panel [expanded]="panelStep === 1" (opened)="setStep(1)">
-      <mat-expansion-panel-header class="title-header">
-        <mat-panel-title>
-          <h4 class="title-underlined mb-0 mt-2">Gallerij</h4>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-comp-gallery [generalContent]="generalContent"></app-comp-gallery>
-      <mat-action-row>
-        <button mat-raised-button color="primary" (click)="prevStep()">Vorige</button>
-        <!-- <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button> -->
-      </mat-action-row>
-    </mat-expansion-panel>
-
-  </mat-accordion>
+<!-- Tab group -->
+<div class="container-fluid" *ngIf="generalContent">
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-tab-group mat-stretch-tabs color="primary">
+        <!-- Header tab -->
+        <mat-tab label="Header">
+          <ng-container *ngTemplateOutlet="headerTab"></ng-container>
+        </mat-tab>
+        <!-- Cards tab -->
+        <mat-tab label="Gallerij">
+          <ng-container *ngTemplateOutlet="portfolioTab"></ng-container>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
 </div>
+
+<!-- Tab content templates -->
+<ng-template #headerTab>
+  <app-comp-header [page]="'portfolio'" [generalContent]="generalContent"></app-comp-header>
+</ng-template>
+<ng-template #portfolioTab>
+  <app-comp-gallery [generalContent]="generalContent"></app-comp-gallery>
+</ng-template>
